<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/signUpToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#2c2fe8"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="Sign Up"
        app:titleTextColor="#FFFFFF" />

    <Button
        android:id="@+id/signUpActivityButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/name_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/userText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/password_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/intendedPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/reenterText"
        app:layout_constraintTop_toTopOf="@+id/intendedPasswordEditText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginBottom="152dp"
        android:text="@string/email_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintStart_toStartOf="@+id/intendedGroup" />

    <TextView
        android:id="@+id/userText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/username_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emailText"
        app:layout_constraintStart_toStartOf="@+id/emailText"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        app:layout_constraintVertical_bias="0.42" />

    <TextView
        android:id="@+id/reenterText"
        android:layout_width="100dp"
        android:layout_height="77dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="52dp"
        android:text="@string/re_enter_password"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reenterEditText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/nameText"
        app:layout_constraintStart_toStartOf="@+id/intendedUsernameEditText"
        app:layout_constraintTop_toTopOf="@+id/nameText" />

    <EditText
        android:id="@+id/intendedUsernameEditText"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/intended_username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/userText"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toTopOf="@+id/userText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress|textEmailSubject"
        app:layout_constraintBottom_toBottomOf="@+id/emailText"
        app:layout_constraintStart_toStartOf="@+id/intendedPasswordEditText"
        app:layout_constraintTop_toTopOf="@+id/emailText" />

    <EditText
        android:id="@+id/intendedPasswordEditText"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/intended_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/reenterEditText"
        app:layout_constraintStart_toStartOf="@+id/reenterEditText" />

    <EditText
        android:id="@+id/reenterEditText"
        android:layout_width="175dp"
        android:layout_height="47dp"
        android:layout_marginBottom="104dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/intendedGroup"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="56dp"
        android:text="Intended Group:"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/intendedGroupEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordText"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <EditText
        android:id="@+id/intendedGroupEditText"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Intended Group"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/intendedPasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintVertical_bias="0.507" />
</android.support.constraint.ConstraintLayout>